tests/negative/test_expr_no_semicolon.orb
fnc main() {
    2+3
}